--- a/css/main1.css
+++ b/css/main1.css
@@ -6,9 +6,20 @@ H4: 16 Lato (main body text)
 H5: 14 Lato 
 H6: 12 Lato
 */
-article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section{
+
+article,
+aside,
+dialog,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+f section {
     overflow-x: hidden;
 }
+
 .w-60 {
     width: 60%;
 }
@@ -494,6 +505,10 @@ button.btn.btn-secondary.dropdown-toggle{
     margin-top: 210px;
 }
 
+.l-banner-position-GE {
+    margin-top: 210px;
+}
+
 .l-banner-bus-hsi-position {
     margin-top: 166px;
     margin-bottom: 30px;
@@ -852,12 +867,12 @@ div.col-sm-2.col-6 {
         margin-top: 175px;
     }
     .l-banner-position {
-        /*
-        padding-bottom: 157px;
-        margin-top: 27px;
-*/
         padding-bottom: 160px;
         margin-top: 100px;
+    }
+    .l-banner-position-GE {
+        padding-bottom: 130px;
+        margin-top: 55px;
 
     }
     .l-banner-position-img {
@@ -958,10 +973,10 @@ div.col-sm-2.col-6 {
     .change-position {
         float: left;
     }
-    .pa-10{
+    .pa-10 {
         padding-left: 20px;
         padding-right: 20px;
-        
+
     }
 
     /*refer-friend*/
@@ -1008,6 +1023,10 @@ div.col-sm-2.col-6 {
         /*        margin-bottom: 67px;*/
     }
     .l-banner-position {
+        margin-top: 27px;
+        margin-bottom: 128px;
+    }
+    .l-banner-position-GE {
         margin-top: 27px;
         margin-bottom: 128px;
     }
@@ -1106,7 +1125,7 @@ div.col-sm-2.col-6 {
 
     }
 */
-    .text-right{
+    .text-right {
         text-align: left!important;
         padding-left: 2%;
     }
@@ -1117,8 +1136,8 @@ div.col-sm-2.col-6 {
     .mb-45 {
         margin-bottom: 45px;
     }
-    .mt-330{
-       margin-top: -330px; 
+    .mt-330 {
+        margin-top: -330px;
     }
 
     .change-width {
